# simd-checker

./: .gitignore  Cargo.toml  README.md  justfile  manifest.yaml  rust-toolchain  txtx.yml
.cargo/: config.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/program-common/: Cargo.toml
crates/program-common/src/: lib.rs
crates/test-common/: Cargo.toml
crates/test-common/src/: lib.rs  manifest.rs  requirements.rs  surfpool.rs  util.rs
crates/tests/: Cargo.toml
crates/tests/src/: lib.rs  simd_0153.rs  simd_0194.rs  simd_0266.rs
crates/tests/src/e2e/: confidential_transfers.rs  mod.rs  proofs_v5.rs  token_ops.rs
program-common/src/: lib.rs
programs/simd_0153/: Cargo.toml
programs/simd_0153/src/: lib.rs
programs/simd_0194/: Cargo.toml
programs/simd_0194/src/: lib.rs
programs/simd_0266/: Cargo.toml
programs/simd_0266/src/: lib.rs
runbooks/deployment/: flow.tx  main.tx  signers.devnet.tx  signers.testnet.tx
runbooks/deployment-flows/: main.tx
runbooks/state/: deployment.devnet.tx-state.json  deployment.testnet.tx-state.json
runner/: Cargo.toml  build.rs
runner/src/: main.rs
simd-checker/: Cargo.toml  build.rs
simd-checker/src/: main.rs
test-common/: Cargo.toml
test-common/src/: lib.rs  surfpool.rs
tests/simd_0189_hashing/: Cargo.toml
tests/simd_0189_hashing/src/: lib.rs
tests/simd_0194/: Cargo.toml
tests/simd_0194/src/: lib.rs
