[workspace]
members = ["crates/*", "programs/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
env_logger = "0.11"
log = "0.4"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
crossbeam = "0.8.4"
pinocchio = "0.10.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }

## Solana crates
solana-address = { version = "2.3.0", features = ["decode"] }
solana-client = "3"
solana-instruction = "3"
solana-keypair = "3"
solana-message = "3"
solana-program = "3"
solana-program-log = "1"
solana-pubkey = "3"
solana-signature = "3"
solana-signer = "3"
solana-system-interface = "3"
solana-sysvar = "3"
solana-transaction = "3"

## Token crates
spl-associated-token-account-interface = { version = "2.0.0", default-features = false }
spl-token-interface = { version = "2.0.0", default-features = false }
