[workspace]
members = ["crates/*", "programs/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
env_logger = "0.11"
log = "0.4"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
crossbeam = "0.8.4"
pinocchio = "0.10.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }

## Solana crates
solana-address = { version = "2.3.0", features = ["decode"] }
solana-client = "3"
solana-instruction = "3"
solana-keypair = "3"
solana-message = "3"
solana-program = "3"
solana-program-log = "1"
solana-pubkey = "3"
solana-signature = "3"
solana-signer = "3"
solana-system-interface = "3"
solana-sysvar = "3"
solana-transaction = "3"

## Token crates
spl-associated-token-account-interface = { version = "2.0.0", default-features = false }
spl-token-interface = { version = "2.0.0", default-features = false }

## Token-2022 + confidential transfer stack
## Versions pinned to match Confidential-Balances-Sample as of 2026-05.
## These pull a `solana-sdk` 3.x / `solana-zk-sdk` 4.x transitive tree
## which must coexist with the explicit solana-* 3 crates above.
bytemuck = "1.18"
bs58 = "0.5"
spl-token-2022 = "10.0.0"
spl-token-client = "0.18.0"
spl-associated-token-account = "8.0.0"
spl-token-confidential-transfer-proof-generation = "0.5.1"
spl-token-confidential-transfer-proof-extraction = "0.5.1"
solana-transaction-status-client-types = "3.1.6"

## Aliased zk-sdk v5 dep — coexists with the v4 transitive dep pulled in by
## spl-token-2022 = 10.0.0. The agave 4.0.0-rc.0 testnet validator's on-chain
## `ZkE1Gama1Proof…` program is built against zk-sdk 5.0.1 (different
## Fiat–Shamir transcript construction from 4.x), so proofs MUST be generated
## with 5.0.1 to verify on-chain. Generated proof bytes are Pod-layout
## compatible with the v4 instruction types used by spl-token-2022's
## builders — see `crates/tests/src/e2e/proofs_v5.rs`.
solana-zk-sdk-v5 = { package = "solana-zk-sdk", version = "5.0.1" }
## Curve25519 — pinned to the same major version v5 zk-sdk + spl-token-2022 use,
## so a single Scalar type works across both.
curve25519-dalek = "4"
