[workspace]
members = ["crates/*", "programs/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
env_logger = "0.11"
log = "0.4"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
crossbeam = "0.8.4"
pinocchio = "0.10.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }

## Solana crates
solana-address = { version = "2.3.0", features = ["decode"] }
solana-client = "3"
solana-instruction = "3"
solana-keypair = "3"
solana-message = "3"
solana-program = "3"
solana-program-log = "1"
solana-pubkey = "3"
solana-signature = "3"
solana-signer = "3"
solana-system-interface = "3"
solana-sysvar = "3"
solana-transaction = "3"

## Token crates
spl-associated-token-account-interface = { version = "2.0.0", default-features = false }
spl-token-interface = { version = "2.0.0", default-features = false }

## Token-2022 + confidential transfer stack (v11 — single zk-sdk lineage at 6.x)
## spl-token-client is intentionally NOT used: it hard-pins spl-token-2022 = ^10.
## All orchestration (mint/account create, configure, deposit, transfer, withdraw,
## context-state + record accounts) is hand-rolled in crates/tests/src/e2e/token_ops.rs
## using the spl-token-2022 11.0.0 instruction builders directly.
bytemuck = "1.18"
bs58 = "0.5"
spl-token-2022 = "11.0.0"
spl-token-2022-interface = "3.0.0"
spl-associated-token-account = "8.0.0"
spl-associated-token-account-client = "2.0.0"
spl-token-confidential-transfer-proof-generation = "0.6.0"
spl-token-confidential-transfer-proof-extraction = "0.6.0"
solana-zk-elgamal-proof-interface = "0.1.2"
solana-zk-sdk-pod = "0.1.1"
## solana-zk-sdk = 6.0.1 is the proof-generation crate's pin; we expose it
## explicitly because tests need ElGamalKeypair / AeKey / proof_data types.
solana-zk-sdk = "6.0.1"
solana-transaction-status-client-types = "3.1.6"
spl-record = "0.4"
## Curve25519 — matches the major version used by zk-sdk 6.x.
curve25519-dalek = "4"
