[package]
name = "simd-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
test-common = { path = "../test-common" }
serde_json = { workspace = true }
simd-0194 = { path = "../tests/simd_0194", features = ["no-entrypoint"] }
solana-keypair = { workspace = true }
solana-signer = { workspace = true }
solana-pubkey = { workspace = true }
solana-client = { workspace = true }
tokio = { workspace = true }
