[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simd-checker"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

## Solana Crates
solana-keypair = { workspace = true }
solana-signer = { workspace = true }
solana-pubkey = { workspace = true }
solana-client = { workspace = true }

## Local Crates
test-common = { path = "../test-common" }
tests = { path = "../tests" }
