[package]
name = "test-common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
crossbeam = { workspace =  true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
solana-pubkey = { workspace = true }
solana-keypair = { workspace = true }
solana-signer = { workspace = true }
solana-client = { workspace = true }
program-common = { path = "../program-common" }

tokio = { workspace = true }

surfpool-core = { git = "https://github.com/solana-foundation/surfpool", package = "surfpool-core", branch = "litesvm-v0.10.x" }
surfpool-types = { git = "https://github.com/solana-foundation/surfpool", package = "surfpool-types", branch = "litesvm-v0.10.x" }
