[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
solana-keypair = { workspace = true }
solana-signer = { workspace = true }
solana-instruction = { workspace = true }
solana-transaction = { workspace = true }
solana-message = { workspace = true }
solana-client = { workspace = true }
solana-signature = { workspace = true }
test-common = { path = "../test-common" }
