[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }

## Solana Crates
solana-keypair = { workspace = true }
solana-signer = { workspace = true }
solana-instruction = { workspace = true }
solana-transaction = { workspace = true }
solana-message = { workspace = true }
solana-client = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-system-interface = { workspace = true, features = ["bincode"]}

## Token Crates
spl-associated-token-account-interface = { workspace = true }
spl-token-interface = { workspace = true }

## Workspace Crates
test-common = { path = "../test-common" }
