[package]
name = "simd-0194"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = [
    "dep:solana-keypair",
    "dep:solana-signer",
    "dep:solana-instruction",
    "dep:solana-transaction",
    "dep:solana-message",
    "dep:solana-client",
    "dep:solana-signature",
    "dep:anyhow",
    "dep:async-trait",
    "dep:test-common",
]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = { workspace = true}
solana-address = { workspace = true }
solana-program-log = { workspace = true }
solana-sysvar = { workspace = true }
program-common = { path = "../../program-common" }
test-common = { path = "../../test-common", optional = true }

# Host-side deps, only needed for test runner (behind no-entrypoint feature)
solana-keypair = { workspace = true, optional = true }
solana-signer = { workspace = true, optional = true }
solana-instruction = { workspace = true, optional = true }
solana-transaction = { workspace = true, optional = true }
solana-message = { workspace = true, optional = true }
solana-client = { workspace = true, optional = true }
solana-signature = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
